--- a/Algorithms/算法基础知识.md
+++ b/Algorithms/算法基础知识.md
@@ -2,13 +2,35 @@
 
 - [递归与数学归纳法](#递归与数学归纳法)
 - [主定理](#主定理)
+    - [情况一](#情况一)
+    - [情况二](#情况二)
+    - [情况三](#情况三)
 
 <!-- /TOC -->
 
-## 递归与数学归纳法
+### 递归与数学归纳法
 递归可以看成是以数学归纳法的思路编程解决问题，确定好初始问题的解和问题的传递解。
 
-## 主定理
+### 主定理
 对于递推关系：
+$$
+T(n)=aT(n/b)+f(n),a\geq1,b>1
+$$
+n为问题规模，a为子问题个数，$n/b$为子问题规模，$f(n)$为递归以外的计算工作。
 
-$$T(n)$$
+$log _{b}(a)$与$f(n)$直接影响复杂度
+
+#### 情况一
+
+当$f(n)<O(n^{log _{b}(a)})$(多项式地小于)时：$O(n^{log _{b}(a)})$主导复杂度，$T(n)=O(n^{log _{b}(a)})$
+
+#### 情况二
+
+当$f(n)>O(n^{log _{b}(a)})$(多项式地大于)时：$O(f(n))$主导复杂度，$T(n)=O(f(n))$
+
+#### 情况三
+
+当$f(n)=O(n^{log _{b}(a)}log^\epsilon n)$（差距不足多项式）时，共同影响复杂度，$T(n)=O(n^{log _{b}(a)}log^{\epsilon+1}n))$
+
+注：部分复杂度符号使用粗略
+
