--- a/Data Structures/数组&链表.md
+++ b/Data Structures/数组&链表.md
@@ -1,5 +1,8 @@
-数组和链表是数据结构的基础，几乎所有其它的数据结构都可以通过数组和（或）链表实现，很多基本的数据结构是既可以使用数组构建也可以通过链表构建，不同的方式给新的数据结构不同的特点，适用于不同的问题。
+**数组和链表**是数据结构的基础，几乎所有其它的数据结构都可以通过数组和（或）链表实现，很多基本的数据结构是既可以使用数组构建也可以通过链表构建，不同的方式给新的数据结构不同的特点，适用于不同的问题。
 
-图可以用邻接矩阵（数组）和邻接表（链表）表示，邻接矩阵计算效率高，但数据稀疏时存储效率不高，，此时邻接表更加节省空间，但运算效率低
+**图**可以用邻接矩阵（数组）和邻接表（链表）表示，邻接矩阵计算效率高，但数据稀疏时存储效率不高，，此时邻接表更加节省空间，但运算效率低
 
-散列（哈希）表通过散列函数将键（key）映射到一个大数组中，解决散列冲突的一个办法是
+**散列（哈希）表**通过散列函数将键（key）映射到一个大数组中，解决散列冲突的一个办法是拉链法（需要用到链表），线性探查法（数组特性）
+
+**树**主要基于链表实现，如果是完全二叉树，可以用数组实现，即堆。
+
